// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Switch > should render 1`] = `
<DocumentFragment>
  <div
    class="flex items-center"
  >
    <button
      class="font-semibold select-none text-base first:mr-3 last:ml-3 text-theme-secondary-700 dark:text-theme-secondary-200 dim:text-theme-dim-200"
      type="button"
    >
      Option A
    </button>
    <label
      class="flex items-center cursor-pointer h-4"
    >
      <input
        class="toggle-input sr-only"
        type="checkbox"
      />
      <div
        class="toggle-handle bg-theme-primary-100 dark:bg-theme-secondary-800 dim:bg-theme-dim-700 relative inline-flex h-[5px] rounded-full w-[30px]"
      >
        <span
          class="absolute top-1/2 -translate-y-1/2 rounded-full transition-all duration-200 ease-in-out bg-theme-primary-600 dim:bg-theme-dim-navy-600 h-4 w-4 handle-inner"
        />
      </div>
    </label>
    <button
      class="font-semibold select-none text-theme-secondary-500 dark:text-theme-secondary-700 dim:text-theme-dim-500 text-base first:mr-3 last:ml-3"
      type="button"
    >
      Option B
    </button>
  </div>
</DocumentFragment>
`;

exports[`Switch > should render disabled 1`] = `
<DocumentFragment>
  <div
    class="flex items-center"
  >
    <button
      class="font-semibold select-none text-base first:mr-3 last:ml-3 text-theme-secondary-700 dark:text-theme-secondary-200 dim:text-theme-dim-200 cursor-default"
      type="button"
    >
      Option A
    </button>
    <label
      class="flex items-center cursor-not-allowed h-4"
    >
      <input
        class="toggle-input sr-only"
        disabled=""
        type="checkbox"
      />
      <div
        class="toggle-handle bg-theme-primary-100 dark:bg-theme-secondary-800 dim:bg-theme-dim-700 relative inline-flex h-[5px] rounded-full w-[30px]"
      >
        <span
          class="absolute top-1/2 -translate-y-1/2 rounded-full transition-all duration-200 ease-in-out bg-theme-primary-100 dark:bg-theme-secondary-800 dim:bg-theme-dim-800 h-4 w-4"
        />
      </div>
    </label>
    <button
      class="font-semibold select-none text-theme-secondary-500 dark:text-theme-secondary-700 dim:text-theme-dim-500 text-base first:mr-3 last:ml-3 cursor-default"
      type="button"
    >
      Option B
    </button>
  </div>
</DocumentFragment>
`;

exports[`Switch > should render large labels 1`] = `
<DocumentFragment>
  <div
    class="flex items-center"
  >
    <button
      class="font-semibold select-none text-sm sm:text-lg first:mr-4 last:ml-4 text-theme-secondary-700 dark:text-theme-secondary-200 dim:text-theme-dim-200"
      type="button"
    >
      Option A
    </button>
    <label
      class="flex items-center cursor-pointer h-4"
    >
      <input
        class="toggle-input sr-only"
        type="checkbox"
      />
      <div
        class="toggle-handle bg-theme-primary-100 dark:bg-theme-secondary-800 dim:bg-theme-dim-700 relative inline-flex h-[5px] rounded-full w-[30px]"
      >
        <span
          class="absolute top-1/2 -translate-y-1/2 rounded-full transition-all duration-200 ease-in-out bg-theme-primary-600 dim:bg-theme-dim-navy-600 h-4 w-4 handle-inner"
        />
      </div>
    </label>
    <button
      class="font-semibold select-none text-theme-secondary-500 dark:text-theme-secondary-700 dim:text-theme-dim-500 text-sm sm:text-lg first:mr-4 last:ml-4"
      type="button"
    >
      Option B
    </button>
  </div>
</DocumentFragment>
`;

exports[`Switch > should render small labels 1`] = `
<DocumentFragment>
  <div
    class="flex items-center"
  >
    <button
      class="font-semibold select-none text-sm first:mr-2 last:ml-2 text-theme-secondary-700 dark:text-theme-secondary-200 dim:text-theme-dim-200"
      type="button"
    >
      Option A
    </button>
    <label
      class="flex items-center cursor-pointer h-3"
    >
      <input
        class="toggle-input sr-only"
        type="checkbox"
      />
      <div
        class="toggle-handle bg-theme-primary-100 dark:bg-theme-secondary-800 dim:bg-theme-dim-700 relative inline-flex h-[5px] rounded-full w-6"
      >
        <span
          class="absolute top-1/2 -translate-y-1/2 rounded-full transition-all duration-200 ease-in-out bg-theme-primary-600 dim:bg-theme-dim-navy-600 h-3 w-3 handle-inner"
        />
      </div>
    </label>
    <button
      class="font-semibold select-none text-theme-secondary-500 dark:text-theme-secondary-700 dim:text-theme-dim-500 text-sm first:mr-2 last:ml-2"
      type="button"
    >
      Option B
    </button>
  </div>
</DocumentFragment>
`;
